# consol

./: .gitignore  Cargo.toml  PROJECT_CONTEXT.md  README.md  README.zh-CN.md  bunfig.toml  package.json  tsconfig.base.json  tsconfig.packages.json
.github/workflows/: ts-quality.yml
apps/cli/: Cargo.toml  README.md
apps/cli/locales/: en-US.ftl  zh-CN.ftl
apps/cli/src/: cli.rs  config.rs  diagnostics.rs  error.rs  fs_util.rs  i18n.rs  main.rs  output.rs
apps/cli/src/commands/: abi.rs  account.rs  activity.rs  analyze.rs  build.rs  cache.rs  chain.rs  console.rs  demo.rs  deploy.rs  detect.rs  dev.rs  gas.rs  hints.rs  init.rs  inspect.rs  interact.rs  mod.rs  network.rs  snapshot.rs  storage.rs  target.rs  test.rs  trace.rs  tx.rs  verify.rs  write.rs
apps/cli/tests/: cli_smoke.rs
crates/: README.md
docs/architecture/: REPO_STRUCTURE.md  TECH_STACK.md
docs/product/: CLI_SPEC.md  DEV_TUI_COMPLEX_STATE_PANEL.md  DEV_TUI_NEXT_GOAL.md  DEV_TUI_REMIX_PARITY_NEXT_GOAL.md  ITERATION_PLAN.md  PRD.md  ROADMAP.md
docs/quality/: AI_ENGINEERING.md  I18N.md  TESTING.md
docs/quality/reviewers/: i18n-review.md  (+4 more)
docs/release/: HOMEBREW.md  INSTALL.md  LINUX.md  NPM.md  WINDOWS.md
docs/research/: OVERSEER_REFERENCE.md  solidity-devtools-conversation.md  solidity-devtools-spec.md
examples/: README.md
examples/manual/: ConSolFeatureDemo.sol
extensions/vscode/: README.md  package.json
plugins/consol.nvim/: README.md
scripts/: check-boundaries.ts  check-i18n.ts  check-no-inline-ui-copy.ts  check-protocol.ts  check-size.ts  release-check.test.ts  release-check.ts
(+15 files in other folders)
